# rupa-parichay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Trainner/: CMakeLists.txt
Trainner/include/mastishk/: Layer.hpp  math.hpp
Trainner/src/: main.cpp
assets/: pixelator.glsl
extlibs/: CMakeLists.txt
mastishk/: CMakeLists.txt
mastishk/include/mastishk/: Layer.hpp  Network.hpp  math.hpp  trainer.hpp
mastishk/src/: Layer.cpp  trainer.cpp
pradarshanam/: CMakeLists.txt
pradarshanam/src/: canvas.cpp  canvas.hpp  config.hpp  main.cpp  program_states.cpp  program_states.hpp  renderer.cpp  renderer.hpp
src/: canvas.cpp  canvas.hpp  config.hpp  main.cpp  renderer.cpp  renderer.hpp
